<resources>
    <string name="app_name">SRA</string>
    <!-- Strings related to login -->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_or_register">Login or Register</string>
    <string name="version">Version 2.0</string>
    <string name="password">Password</string>
    <string name="username">User Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="automatic_irrigation_system">Automatic Irragation System</string>
    <string name="catalog">Catalog</string>
    <string name="browse">Browse</string>
    <string name="temperature">Temperature</string>
    <string name="moisture">Moisture</string>
    <string name="moisture_control">Moisture Control</string>
    <string name="auto">Auto</string>
    <string name="manual">Manual</string>
    <string name="status">Status</string>
    <string name="automatic_mode">Automatic Mode</string>
    <string name="manual_mode">Manual Mode</string>
    <string name="system_on">System On</string>
    <string name="home">Home</string>
    <string name="controller">Controller</string>
    <string name="settings">Settiings</string>
    <string name="plant1">Plant 1</string>
    <string name="plant2">Plant 2</string>
    <string name="plant3">Plant 3</string>
    <string name="update">Update</string>
</resources>