<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="24dp"
    tools:context=".ControllerFragment">

    <RelativeLayout
        android:id="@+id/fixed_content"
        android:layout_width="match_parent"
        android:layout_height="182dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/skyblue"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/legend1"
            style="@style/itemText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="36dp"
            android:text="@string/temperature" />

        <TextView
            android:id="@+id/legend2"
            style="@style/itemText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="34dp"
            android:text="@string/moisture" />

        <TextView
            android:id="@+id/tempView"
            style="@style/itemText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:layout_marginStart="44dp"
            android:layout_marginTop="35dp"
            android:layout_toEndOf="@+id/legend1"
            android:text="25" />

        <TextView
            android:id="@+id/humText"
            style="@style/itemText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="85dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="30dp"
            android:layout_toEndOf="@+id/legend2"
            android:text="32" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/controlView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fixed_content">

        <TextView
            android:id="@+id/legend3"
            style="@style/itemText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="90dp"
            android:text="@string/moisture_control"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="149dp"
            android:layout_height="40dp"
            android:layout_below="@+id/legend3"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="102dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="271dp" />

        <Switch
            android:id="@+id/switchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:scaleX="2"
            android:scaleY="2" />

        <Button
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switchButton"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="132dp"
            android:text="@string/update" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/autoButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="72dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/controlView"
        app:srcCompat="@drawable/ic_baseline_manage_history_24" />

    <TextView
        android:id="@+id/legend4"
        style="@style/itemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:text="@string/auto"
        app:layout_constraintStart_toEndOf="@+id/autoButton"
        app:layout_constraintTop_toBottomOf="@+id/controlView" />

    <ImageButton
        android:id="@+id/manualButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="72dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/legend4"
        app:layout_constraintTop_toBottomOf="@+id/controlView"
        app:srcCompat="@drawable/ic_baseline_handyman_24" />

    <TextView
        android:id="@+id/legend5"
        style="@style/itemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:text="@string/manual"
        app:layout_constraintStart_toEndOf="@+id/manualButton"
        app:layout_constraintTop_toBottomOf="@+id/controlView" />

    <TextView
        android:id="@+id/legend6"
        style="@style/itemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manualButton" />

    <TextView
        android:id="@+id/statusText"
        style="@style/itemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/system_on"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.282"
        app:layout_constraintStart_toEndOf="@+id/legend6"
        app:layout_constraintTop_toBottomOf="@+id/manualButton" />


</androidx.constraintlayout.widget.ConstraintLayout>